--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "storybook": "start-storybook -p 9009",
-    "build-storybook": "build-storybook"
+    "start": "start-storybook -p 9009",
+    "build": "build-storybook"
   }
 }
